# neat_trident

./: CLAUDE.md  CLAUDE_USER.md  GUIDE.md  LOG.md  TODO.md  handover_next_session.md  phase0_results.md  plan_trident.md  pyproject.toml  trident_hyp_neat.md  trident_plan_hyp_e.md
.claude/rules/: commit.md  python-style.md  testing.md  trident-patterns.md
logs/: benchmark_cpu_spiral.jsonl  benchmark_cpu_vector.jsonl  benchmark_gpu_spiral.jsonl  benchmark_gpu_vector.jsonl  benchmark_sqrt_pop1000_spiral.jsonl  benchmark_sqrt_pop1000_vector.jsonl  benchmark_sqrt_pop200_vector.jsonl  benchmark_sqrt_pop400_spiral.jsonl  benchmark_sqrt_pop400_vector.jsonl  benchmark_summary.json  benchmark_summary.txt  gpu_temp_monitor.csv  gpu_temp_pop1000.csv  gpu_temp_pop200.csv  gpu_temp_pop2000.csv  gpu_temp_pop300.csv  gpu_temp_pop400.csv  gpu_temp_pop700.csv  gpu_temp_sqrt_pop1000.csv  gpu_temp_sqrt_pop200.csv  gpu_temp_sqrt_pop400.csv
scripts/: es_hyperneat_verify.py  eval_384dim.py  faiss_hybrid_verify.py  integration_test_384.py  long_term_loop.py  med_integration_verify.py  neat_benchmark.py  neat_optuna_tune.py  novelty_search_verify.py  phase0_verify.py  phase1_verify.py  phase2_verify.py  phase3_verify.py  phase4_verify.py
src/: es_hyperneat.py  map_elites_archive.py  novelty_search.py
tests/: test_384dim_interface.py  test_context_search.py  test_domain_index_adapter.py  test_es_hyperneat.py  test_hyperbolic_association.py  test_map_elites.py  test_neat_assoc_evolver.py  test_neat_gate.py  test_neat_indexer.py  test_neat_slot_filler.py  test_novelty_search.py
(+15 files in other folders)
